<resources>
    <string name="app_name">Clima PY</string>
    <string name="ubicacion">Ubicación</string>
    <string name="actualizado_en">Actualizado en</string>
    <string name="estado">Cielo Abierto</string>
    <string name="temperatura">24°C</string>
    <string name="min_temperatura">Min Temperatura</string>
    <string name="max_temperatura">Max Temperatura</string>
    <string name="seleccione_la_ciudad">Seleccione la ciudad</string>
    <string name="asunci_n">Asunción</string>
    <string name="encarnaci_n">Encarnación</string>
    <string name="villa_rica">Villa Rica</string>
    <string name="presidente_franco">Presidente Franco</string>
    <string name="capiata">Capiata</string>
    <string name="ciudades_del_paraguay">Ciudades del Paraguay</string>
    <string name="ciudades">Ciudades</string>
    <string-array name="ciudades_array">
        <item>Asuncion</item>
        <item>Capiata</item>
        <item>Caaguazu</item>
        <item>Caacupe</item>
        <item>Coronel Oviedo</item>
        <item>Concepcion</item>
        <item>Colonia Mariano Roque Alonso</item>
        <item>Encarnacion</item>
        <item>Fernando de la Mora</item>
        <item>Ita</item>
        <item>Itaugua</item>
        <item>Lambare</item>
        <item>Limpio</item>
        <item>Nemby</item>
        <item>Pilar</item>
        <item>Presidente Franco</item>
        <item>San Lorenzo</item>
        <item>San Antonio</item>
        <item>Villarrica</item>
        <item>Villa Elisa</item>
    </string-array>
</resources>